--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jobify",
   "version": "1.0.0",
-  "description": "Jobufy is a simple job board for sites.",
+  "description": "Jobify is a simple job board for sites.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js" 
   },
   "keywords": [
     "jobify",
